add_library(  common STATIC
              # order.cpp
              # settings.cpp
              # dictionary.cpp
              # fixOrderFactory.cpp
              uniqueOrderId.cpp
              # messageLogger.cpp
              # crypto.cpp
              errorlog.cpp
              # connectionPool.cpp
              # sociOrder.cpp
              # errorMessages.cpp
              # adminMessages.cpp
              # connectionTemplate.cpp
              # rabbitQueue.cpp
              # bpoValidation.cpp
              dismantleFix.cpp
              # errorCodes.cpp
              # markets.cpp
              # thriftConnectionPool.cpp
              # scripMaster.cpp
              # subscribedSecurities.cpp
              )



